--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ go:
 
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -y cpio realpath squashfs-tools
+ - sudo apt-get install -y cpio realpath squashfs-tools libkeyutils-dev
  - sudo apt-get install -y build-essential
 
 install:
